# digits_utils

./: Cargo.toml  LICENSE.md  README.md
src/: abs_assigner.rs  digit_size.rs  lib.rs  to_digits.rs  to_digits_collection.rs  to_digits_vec.rs
src/digit_size/: digit_size.rs  mod.rs
src/to_digits/: abs_assigner.rs  mod.rs  to_digits.rs  to_digits_collection.rs
tests/: to_digits_collection_test.rs  to_digits_test.rs
