[package]
name = "digits_utils"
version = "0.2.1"
edition = "2018"
rust-version = "1.51"
authors = ["Bas Antonius de Jong"]
description = "Utilities for converting numbers to digits"
license = "MIT"
repository = "https://github.com/BAFGdeJong/digits_utils"
categories = ["mathematics", "no-std", "value-formatting"]
keywords = ["digits", "number", "array", "utility", "vector"]
readme = "README.md"

[features]
default = []
no_std = []
bit_hacks = []
